--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -42,8 +42,23 @@ $fontsize-h1:  			        5.0rem !default;
 $fontsize-h2:  			        3.6rem !default;
 $fontsize-h3:  			        $fontsize-bigger !default; // 20px
 
+// $fontweight-hair:           100 !default;
+$fontweight-light:          300 !default; // normal & italic
+$fontweight-base:           400 !default; // normal & italic
+// $fontweight-semibold:       500 !default;
+$fontweight-bold:           700 !default; // italic
+// $fontweight-book:           900 !default;
+
 $fontfamily-base:           'Roboto' !default;
+// $fontfamily-base:           'Raleway';
 $fontfamily-alt:            'InCaseOf' !default;
+
+// CDN fonts
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700i');
+// @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700i');
+
+// @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 
 
 ////////////////////////////////////////////////////////////////////////////////
