--- a/src/scss/sections.scss
+++ b/src/scss/sections.scss
@@ -13,7 +13,7 @@
 %headline {
   text-transform: uppercase;
   font-size: $fontsize-big;
-  font-weight: 700;
+  font-weight: $fontweight-bold;
   font-style: italic;
 }
 
@@ -26,7 +26,7 @@
 }
 
 %big-strong {
-  font-weight: 500;
+  font-weight: $fontweight-bold;
   font-size: 1.15em;
   line-height: 1;
 }
@@ -62,7 +62,7 @@
   text-align: center;
   text-transform: uppercase;
   font-size: 2rem;
-  font-weight: 300;
+  font-weight: $fontweight-light;
   font-style: italic;
 
   &:before {
