--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@
 $breakpoints: (
                             // 'sm':  767px,
                             // 'md':  992px,
-                            'lg':  25cm
+                            'lg':  50em
 ) !default;
 
 $aside-width:               29% !default; // Width of the left column
