--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -43,7 +43,7 @@ $fontsize-h3:  			        $fontsize-bigger !default; // 20px
 
 // $fontweight-hair:           100 !default;
 $fontweight-light:          300 !default; // normal & italic
-$fontweight-base:           400 !default; // normal & italic
+$fontweight-base:           400 !default; // normal (body default)
 // $fontweight-semibold:       500 !default;
 $fontweight-bold:           700 !default; // italic
 // $fontweight-book:           900 !default;
