--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -45,17 +45,22 @@ $fontsize-h3:  			        $fontsize-bigger !default; // 20px
 $fontweight-light:          300 !default; // normal & italic
 $fontweight-base:           400 !default; // normal (body default) & italic
 // $fontweight-semibold:       500 !default;
-$fontweight-bold:           700 !default; // italic
+$fontweight-bold:           900 !default; // italic
 // $fontweight-book:           900 !default;
 
 $fontfamily-base:           'Roboto' !default;
-// $fontfamily-base:           'Raleway';
+// $fontfamily-base:           'Raleway'; // Wider than Roboto
+// $fontfamily-base:           'Montserrat'; // A bit bolder, but too wide
+$fontfamily-base:           'Lato'; //
+
 $fontfamily-alt:            'InCaseOf' !default;
 
 // CDN fonts
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700i');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700i');
 // @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700i');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,700i');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,900i');
 
 // @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 
