--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,11 +5,8 @@
   margin: 0 auto;
   background-color: white;
 
-  @include bp('') {
-
-  }
   @include bp('lg') {
-    width: 57em;
+    width: $cv-width;
     // width: 21cm; // A4 force format
 		// min-height: 29.7cm; // A4 force format
     overflow: hidden;
