--- a/src/scss/sections.scss
+++ b/src/scss/sections.scss
@@ -72,7 +72,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    transform: skewX(-10deg);
+    transform: skewX($skew-angle);
     background-color: $color-secondary;
     @include m-shadow(1);
     z-index: -1;
