--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $breakpoints: (
                             'lg': 60em // 960px
 ) !default;
 
-$cv-width:                  57em; // Desktop document width
+$cv-width:                  54em; // Desktop document width
 $aside-width:               29% !default; // Width of the left column
 
 $skew-angle:                -7deg !default; // Skew elements use this angle
@@ -29,15 +29,18 @@ $color-gray-lighter:        #eee !default;
 
 $pixels-per-rem:            10 !default; // Kind of global zoom
 
-$fontsize-base:             1.4rem !default;
-$fontsize-base-print:       1.2rem !default;
+$fontsize-base:             1.6rem !default;
+$fontsize-base-print:       1.4rem !default;
 
 $lineheight-base:           1.5 !default;
 
-$fontsize-big: 	            1.6rem !default;
-$fontsize-bigger:           2.0rem !default;
 $fontsize-small:            1.4rem !default;
 $fontsize-smaller:          1.2rem !default;
+$fontsize-big: 	            1.8rem !default;
+$fontsize-bigger:           2.0rem !default;
+$fontsize-biggest:          2.4rem !default;
+$fontsize-huge:             3.0rem !default;
+$fontsize-giant:            4.0rem !default;
 
 $fontsize-h1:  			        5.0rem !default;
 $fontsize-h2:  			        3.6rem !default;
@@ -58,9 +61,10 @@ $fontfamily-base:           'Lato'; // Very compact, could fit with a 900 bold
 $fontfamily-alt:            'InCaseOf' !default;
 
 // CDN fonts
+// => https://fonts.google.com/?category=Sans+Serif&stylecount=7
 
 // @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700i');
-// @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700i');
+// @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700i');
 // @import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,700i');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,900i');
 
