Revamped section padding, more air added

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -82,6 +82,7 @@ $gutter-in-px:              round($gutter * $pixels-per-rem / 1rem);
 
 $gutter-half:		            $gutter / 2;
 $gutter-quarter:	          $gutter / 4;
+$gutter-and-half:		        $gutter * 1.5;
 $gutter-double:		          $gutter * 2;
 $gutter-quad:		            $gutter * 4;
 
