--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -1,6 +1,6 @@
 // USER
 
-.user__name {
+.user__name {//outline: 4px solid rgba(255,0,0,0.5);
   position: absolute;
   display: inline-block;
   top: 0;
@@ -8,14 +8,9 @@
   transform: translate3d(-50%, -50%, 0);
   margin: 0;
   padding: $gutter-half $gutter-double;
-  // padding-right: $gutter-double;
   text-align: center;
   color: white;
-
-  .name__last-name {
-    display: inline-block;
-    margin-left: - $gutter-quarter * 1.3;  // Fine-tuning
-  }
+  font-size: $fontsize-giant;
 
   &:before {
     content: "";
@@ -31,12 +26,13 @@
   }
 
   @include bp('lg') {
-    display: block;
-    left: auto;
-    transform: translate3d(0%, -50%, 0);
-    padding: $gutter-half $gutter;
-    font-size: $fontsize-giant;
-	}
+    padding-left: $gutter-half;
+    padding-right: $gutter-half;
+
+    &:before {
+      right: -1000px; // sort of infinity
+    }
+  }
 }
 
 .user__job {
