--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -1,5 +1,7 @@
 // USER
 
+// User name
+
 .user__name {//outline: 4px solid rgba(255,0,0,0.5);
   position: absolute;
   display: inline-block;
@@ -35,6 +37,8 @@
   }
 }
 
+// User job
+
 .user__job {
   margin-bottom: 0;
   margin-top: $gutter-double;
@@ -47,6 +51,7 @@
 	}
 }
 
+// User image
 
 .user__media {}
 
@@ -134,23 +139,17 @@
   padding-bottom: $gutter-double;
 }
 
-.user__metas {
-  flex: 1;
+.user__social,
+.user__contact {
   background-color: white;
   color: $color-primary;
+}
 
-  h3 {
-    font-size: $fontsize-big;
-    padding: $gutter-quarter;
+.user__contact {
+  flex: 1;
+}
 
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-
-  > article {
-    margin-bottom: $gutter;
-  }
+.user__metas {
 }
 
 .socials,
