Pretty body background gradients and padding

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,6 +19,7 @@ $skew-angle:                -7deg !default; // Skew elements use this angle
 $color-primary:             #EE5722 !default;
 $color-secondary:           #2d3e4e !default;
 
+$color-gray-darkest:        #111 !default;
 $color-gray-darker:         #222 !default;
 $color-gray-dark:           #444 !default;
 $color-gray:                #888 !default;
