--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,17 +4,32 @@
  *
  ******************************************************************************/
 
-@import "reset";
+ // Config
+ @import "variables";
 
-@import "variables";
+// Reset
+@import "base/reset";
 
-@import "mixins";
-@import "base";
-@import "grid";
-@import "layout";
+// Base
+@import "base/mixins";
+@import "base/base";
+@import "base/grid";
+@import "base/layout";
 
-@import "user";
-@import "timeline";
-@import "sections";
+// UI Components
+@import "components/section";
+@import "components/section-title";
+@import "components/section-body";
+@import "components/section-colors";
 
-@import "print";
+@import "components/avatar";
+@import "components/name";
+@import "components/job";
+@import "components/status";
+@import "components/social";
+@import "components/contact";
+
+@import "components/timeline";
+
+// Print
+@import "base/print";
