--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -4,7 +4,7 @@
 
   > * {
     display: block;
-    margin-bottom: $gutter-half;
+    margin-bottom: $gutter * 0.75;
     font-style: italic;
    }
 }
