--- a/src/scss/components/_section-body.scss
+++ b/src/scss/components/_section-body.scss
@@ -54,6 +54,7 @@
 
   .section--tasks &,
   .section--tools &,
+  .section--projects-2 &,
   .section--profile & {
 
     h3 {
@@ -62,7 +63,58 @@
     }
   }
 
+  .section--projects-1 &,
+  .section--projects-3 &,
+  .section--projects-4 &,
+  .section--projects-5 & {
+
+    h3 {
+      @extend %trailing-slashes;
+    }
+  }
+
+
+
   p + p {
     margin-top: $gutter-half;
   }
+
+  ul {
+    padding-left: $gutter;
+
+
+    > li {
+      position: relative;
+
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0.55em;
+        left: -$gutter-third * 2;
+        width: $gutter-third;
+        height: $gutter-third;
+        background-color: currentColor;
+        transform: skewX($skew-angle);
+      }
+    }
+  }
+
+  h3 + ul {
+    margin-top: $gutter-half; // Oulala!
+  }
+}
+
+// PILLS
+
+.pill {
+  position: relative;
+  top: -0.5rem;
+  color: $color-primary;
+  font-size: $fontsize-smaller;
+  text-transform: uppercase;
+  font-style: italic;
+
+  &:before { content: "[ "; }
+  &:after { content: " ]"; }
 }
