--- a/src/scss/components/_section-colors.scss
+++ b/src/scss/components/_section-colors.scss
@@ -29,9 +29,24 @@
   h3 {
     color: $color-primary;
   }
+
+  a {
+    color: $color-primary;
+
+    &:hover {
+      color: $color-primary-light;
+      border-color: $color-primary-light;
+    }
+  }
 }
 
 .section--tasks { @extend %bg--secondary; }
 .section--tools { @extend %bg--primary; }
 .section--timeline { @extend %bg--white; }
 .section--profile { @extend %bg--secondary; }
+
+.section--projects-1 { @extend %bg--white; }
+.section--projects-2 { @extend %bg--primary; }
+.section--projects-3 { @extend %bg--white; }
+.section--projects-4 { @extend %bg--secondary; }
+.section--projects-5 { @extend %bg--white; }
