--- a/src/scss/components/_avatar.scss
+++ b/src/scss/components/_avatar.scss
@@ -1,6 +1,7 @@
 // User image
 
-.user__media {}
+.user__media {
+}
 
 .user__media--hero {
   $dot-size: $gutter-quad;
@@ -8,12 +9,11 @@
   position: relative;
 
   .media {
-    max-height: 40rem;
+    // max-height: 50rem;
     overflow: hidden;
   }
 
   @include bp('lg') {
-
     .media {
       position: relative;
       height: 0;
@@ -33,16 +33,20 @@
 
     .media__image {
       position: absolute;
-      top: -10%;
-      right: -50%;
-      max-width: none;
-      max-width: 336%;
+      top: 0;
+      right: -22%;
+      max-width: 140%;
+    }
+
+    .media__image--alternate {
+      top: -12%;
+      right: -35%;
+      max-width: 160%;
     }
   }
 }
 
 .user__media--round {
-
   $media-size: 28rem;
 
   display: inline-block;
